# group_25_plaineda

./: CHANGELOG.html  CHANGELOG.md  CODE_OF_CONDUCT.html  CODE_OF_CONDUCT.md  CONTRIBUTING.html  CONTRIBUTING.md  DEVELOPMENT.html  LICENSE  README.md  _quarto.yml  environment.yml  index.html  index.qmd  objects.json  pyproject.toml  retrospective.html  retrospective.qmd  search.json
.github/ISSUE_TEMPLATE/: 01-bug-report.yml  02-peer-review-request.yml  config.yml
.github/workflows/: build.yml  create_issues.yml  deploy.yml  docs.yml  release.yml  test.yml
docs/: CHANGELOG.html  CODE_OF_CONDUCT.html  CONTRIBUTING.html  DEVELOPMENT.html  conf.py  index.html  index.md  search.json
docs/reference/: convert_currency.convert_currency.html  estimate_trip_cost.estimate_trip_cost.html  format_destination.format_destination.html  get_packing_list.get_packing_list.html  index.html
reference/: convert_currency.convert_currency.html  convert_currency.convert_currency.qmd  estimate_trip_cost.estimate_trip_cost.html  estimate_trip_cost.estimate_trip_cost.qmd  format_destination.format_destination.html  format_destination.format_destination.qmd  get_packing_list.get_packing_list.html  get_packing_list.get_packing_list.qmd  index.html  index.qmd
src/: estimate_trip_cost.py  get_packing_list.py
src/dsci_524_group_25/: __init__.py  convert_currency.py  estimate_trip_cost.py  format_destination.py  get_packing_list.py
src/travelpy/: __init__.py  convert_currency.py  estimate_trip_cost.py  format_destination.py  get_packing_list.py
tests/unit/: test_convert_currency.py  test_covert_currency.py  test_estimate_trip_cost.py  test_example.py  test_format_destination.py  test_get_packing_list.py
