################################################################################
# Build Configuration
################################################################################

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-vcs"]

################################################################################
# Project Configuration
################################################################################

[project]
name = "travelpy"
dynamic = ["version"]

description = "A lightweight Python package for travel planning"
authors = [
    { name = "Kwok Hoi Hin" },
    { name = "Esteki Hooman", email = "esteki.net@gmail.com" },
    { name = "Jaskiel Derrick" },
    { name = "Rebecca Rosette Nanfuka" },
]
license = "MIT"
requires-python = ">= 3.10"
readme = {"file" = "README.md", "content-type" = "text/markdown"}
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
]
keywords = ["travel", "planning", "currency", "packing"]
dependencies = []

[project.urls]
Homepage = "https://github.com/UBC-MDS/DSCI_524_group_25"
"Source Code" = "https://github.com/UBC-MDS/DSCI_524_group_25"
"Bug Tracker" = "https://github.com/UBC-MDS/DSCI_524_group_25/issues"
Documentation = "https://ubc-mds.github.io/DSCI_524_group_25/"
Download = "https://test.pypi.org/project/travelpy/#files"

[project.optional-dependencies]
dev = [
    "hatch",
    "pre-commit",
    "ruff",
]

docs = [
    "quartodoc",
]

build = [
    "pip-audit",
    "twine",
]

tests = [
    "pytest",
    "pytest-cov",
    "pytest-raises",
    "pytest-randomly",
    "pytest-xdist",
]


################################################################################
# Tool Configuration
################################################################################

[tool.hatch.build]
only-packages = true

[tool.hatch.build.targets.wheel]
packages = ["src/travelpy"]


################################################################################
# Semantic Versioning from Git Tags
################################################################################

[tool.hatch.version]
source = "vcs"
raw-options = {version_scheme = "no-guess-dev", local_scheme = "no-local-version"}

[tool.hatch.build.hooks.vcs]
version-file = "src/travelpy/__version__.py"


################################################################################
# Pytest Configuration
################################################################################

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["raises"]

[tool.coverage.paths]
source = [
    "src/travelpy",
    "*/site-packages/travelpy",
]

[tool.coverage.run]
branch = true
parallel = true

[tool.coverage.report]
exclude_lines = ["pragma: no cover"]
precision = 2


[tool.hatch.envs.default]
installer = "uv"

################################################################################
# Hatch Environments
################################################################################

#--------------- Build and check your package ---------------#

[tool.hatch.envs.build]
description = """Test the installation the package."""
features = [
    "build",
]
detached = true

[tool.hatch.envs.build.scripts]
check = [
    "hatch build {args:--clean}",
    "twine check dist/*",
]

#--------------- Run tests ---------------#
[tool.hatch.envs.test]
description = """Run the test suite."""
features = [
    "tests",
]

[[tool.hatch.envs.test.matrix]]
python = ["3.10", "3.13"]

[tool.hatch.envs.test.scripts]
run = "pytest {args:--cov=travelpy --cov-report=term-missing --cov-report=xml}"

#--------------- Build and preview your documentation ---------------#

[tool.hatch.envs.docs]
description = """Build or serve the documentation."""
features = [
    "docs",
]

[tool.hatch.envs.docs.scripts]
build = ["quartodoc build && quarto render"]
serve = ["quarto preview"]


#--------------- Check security for your dependencies ---------------#

[tool.hatch.envs.audit]
description = """Check dependencies for security vulnerabilities."""
features = [
    "build",
]

[tool.hatch.envs.audit.scripts]
check = ["pip-audit"]
